--- a/ModernJs/index.html
+++ b/ModernJs/index.html
@@ -10,6 +10,15 @@
 
 </head>
 <body>
+    <div id="message"></div>
+    <div id="test"></div>
+    <div id="event">CLICK</div>
+    <div class="myclass"></div>
+    <div class="myclass"></div>
+    <div class="myclass"></div>
+    <div class="myclass"></div>
+
+
     <div id="tables"></div>
     <div id="result"></div>
     <div id="resultProduct"></div>
@@ -25,8 +34,14 @@
         </ul>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="javascript.js" type="text/javascript">
+    </script>
+
+    <!-- Modern JS -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
+
         // let name = "John";
         // document.getElementById('result').innerHTML = name;
 
